# npu_model

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test
.github/workflows/: test.yml
compiler/: CMakeLists.txt  README.md
compiler/docs/: npu_model_interface.md
compiler/include/: CMakeLists.txt
compiler/include/npu/: InitAllDialects.h  InitAllPasses.h
compiler/include/npu/Conversion/: Passes.h
compiler/include/npu/Dialect/: CMakeLists.txt
compiler/include/npu/Dialect/ISA/IR/: CMakeLists.txt  ISADialect.h  ISADialect.td  ISAOps.td
compiler/include/npu/Dialect/Kernel/IR/: CMakeLists.txt  KernelDialect.h  KernelDialect.td  KernelOps.td
compiler/include/npu/Dialect/Schedule/IR/: CMakeLists.txt  ScheduleDialect.h  ScheduleDialect.td  ScheduleOps.td
compiler/include/npu/Translation/: TranslateToTextISA.h
compiler/lib/: CMakeLists.txt  InitAllDialects.cpp  InitAllPasses.cpp
compiler/lib/Conversion/: CMakeLists.txt  Passes.cpp
compiler/lib/Conversion/KernelToSchedule/: KernelToSchedule.cpp
compiler/lib/Conversion/LinalgToKernel/: LinalgToKernel.cpp
compiler/lib/Conversion/ScheduleToISA/: ScheduleToISA.cpp
compiler/lib/Dialect/: CMakeLists.txt
compiler/lib/Dialect/ISA/IR/: CMakeLists.txt  ISADialect.cpp
compiler/lib/Dialect/Kernel/IR/: CMakeLists.txt  KernelDialect.cpp
compiler/lib/Dialect/Schedule/IR/: CMakeLists.txt  ScheduleDialect.cpp
compiler/lib/Translation/: CMakeLists.txt  TextISATranslate.cpp
compiler/scripts/: bootstrap_llvm.sh  build_pinned_llvm.sh  configure_compiler.sh  configure_with_merlin.sh  emit_symbol_ukernel_isa.sh  run_simulator_smoke.py  show_ukernel_pipeline.sh
compiler/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
compiler/test/lowering/: linalg_generic_fp8_ukernel_pipeline.mlir  linalg_to_isa.mlir  ukernel_symbol_to_isa.mlir
compiler/test/outputs/: gemma_attention_isa.txt  gemma_attention_print_after_all.txt  gemma_mlp_isa.txt  gemma_mlp_isa_matching_upstream.txt
compiler/test/outputs/ukernel_pipeline/: 01_kernel.mlir  02_schedule.mlir  03_isa.mlir  04_isa.txt
compiler/test/translation/: text_isa.mlir
compiler/tools/: CMakeLists.txt  npu-opt.cpp  npu-translate.cpp
docs/01_introduction/: README.md
docs/03_registers_and_execution_state/: README.md
model_npu/: isa.py  simulation.py
model_npu/configs/: generate_isa_definition.py  isa_definition.py
model_npu/control/: isa_parse.py  parse.py
model_npu/ee194_softfloat/: dump.txt  ee194_softfloat.c  ee194_softfloat.h  generate_test.py  main  main.c  out.txt  test.py  test.txt
model_npu/hardware/: __init__.py  arch_state.py  config.py  core.py  dma.py  exu.py  hardware.py  idu.py  ifu.py  lsu.py  mxu.py  stage_data.py  vpu.py
model_npu/logging/: __init__.py  logger.py
model_npu/software/: __init__.py  instruction.py
npu_model/: isa.py  isa_patterns.py  isa_types.py  out.scala  profiling.py  simulation.py
npu_speed_of_light/: simple_throughput_model.py
scripts/: assemble.py  assemble_all.sh  profile_kernel.py  run.py  simple_throughput_model.py  test_archstate.py  test_bank_conflict.py  test_memory_commit.py  test_programs.py
tests/: conftest.py  helpers.py  test_arch_state.py  test_assembler.py  test_bank_conflict.py  test_memory_commit.py  test_mlir_shapes.py  test_programs.py  test_release_conformance.py
(+272 files in other folders)
