[project]
name = "npu-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "matplotlib>=3.8.0",
    "tabulate>=0.9.0",
    "pre-commit>=4.5.1",
    "torch>=2.10.0",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
